wasmtime4j-comparison-tests/src/test/java/ai/tegmentum/wasmtime4j/comparison/generated/misc_testsuite/MissingAtomicsTest.java
package ai.tegmentum.wasmtime4j.comparison.generated.misc_testsuite;

import static org.junit.jupiter.api.Assertions.*;

import ai.tegmentum.wasmtime4j.*;
import org.junit.jupiter.api.DisplayName;
import org.junit.jupiter.api.Test;

/**
 * Equivalent Java test for Wasmtime test: misc_testsuite::missing-atomics
 *
 * <p>Original source: missing-atomics.wast:1 Category: misc_testsuite
 *
 * <p>This test validates that wasmtime4j produces the same results as the upstream Wasmtime
 * implementation for this test case.
 */
public final class MissingAtomicsTest {

  @Test
  @DisplayName("misc_testsuite::missing-atomics")
  public void testMissingAtomics() {
    // WAT code from original Wasmtime test:
    // (assert_invalid (module (memory 1 1 shared)) "threads must be enabled for shared memories")

    final String wat =
        """
        (assert_invalid (module (memory 1 1 shared)) "threads must be enabled for shared memories")
    """;

    // TODO: Implement equivalent wasmtime4j test logic
    // 1. Create Engine
    // 2. Compile WAT to Module
    // 3. Instantiate Module
    // 4. Call exported functions
    // 5. Assert expected results

    fail("Test not yet implemented - awaiting test framework completion");
  }
}
